# Modules/CrmEquipmentRentals/routes/web.php
@@ -2,11 +2,9 @@
 
 use Illuminate\Foundation\Http\Middleware\VerifyCsrfToken;
 use Illuminate\Support\Facades\Route;
-use Modules\CrmCore\Http\Controllers\LegacyPhpApiController;
 use Modules\CrmEquipmentRentals\Http\Controllers\EquipmentRentalApiController;
 
 $crmApiMiddleware = ['throttle:crm-api', 'crm.compress'];
-$crmLegacyApiMiddleware = ['throttle:crm-legacy-api', 'crm.compress'];
 
 Route::view('/locations-materiel', 'crm')
     ->middleware(['auth', 'crm.module:locations-materiel,equipment_rentals.view,equipment_rentals.create,equipment_rentals.manage_items'])
@@ -69,9 +67,3 @@ Route::match(['GET', 'POST'], '/api/mobile/equipment-rentals', EquipmentRentalAp
     ->middleware(['auth:sanctum', ...$crmApiMiddleware, 'crm.mobile_scope:crm:module:locations-materiel'])
     ->withoutMiddleware([VerifyCsrfToken::class])
     ->name('crm.api.mobile.equipment-rentals');
-
-Route::any('/api/equipment-rentals.php', LegacyPhpApiController::class)
-    ->defaults('crm_legacy_target', '/api/equipment-rentals')
-    ->middleware($crmLegacyApiMiddleware)
-    ->withoutMiddleware([VerifyCsrfToken::class])
-    ->name('crm.api.equipment-rentals.legacy');
