# Modules/CrmPages/routes/web.php
@@ -2,11 +2,9 @@
 
 use Illuminate\Foundation\Http\Middleware\VerifyCsrfToken;
 use Illuminate\Support\Facades\Route;
-use Modules\CrmCore\Http\Controllers\LegacyPhpApiController;
 use Modules\CrmPages\Http\Controllers\PageApiController;
 
 $crmApiMiddleware = ['throttle:crm-api', 'crm.compress'];
-$crmLegacyApiMiddleware = ['throttle:crm-legacy-api', 'crm.compress'];
 
 Route::view('/pages-crm', 'crm')
     ->middleware(['auth', 'crm.module:pages-crm,pages.view,pages.manage'])
@@ -25,9 +23,3 @@ Route::match(['GET', 'POST'], '/api/mobile/pages', PageApiController::class)
     ->middleware(['auth:sanctum', ...$crmApiMiddleware, 'crm.mobile_scope:crm:module:pages-crm'])
     ->withoutMiddleware([VerifyCsrfToken::class])
     ->name('crm.api.mobile.pages');
-
-Route::any('/api/pages.php', LegacyPhpApiController::class)
-    ->defaults('crm_legacy_target', '/api/pages')
-    ->middleware($crmLegacyApiMiddleware)
-    ->withoutMiddleware([VerifyCsrfToken::class])
-    ->name('crm.api.pages.legacy');
