# Modules/CrmReservations/routes/web.php
@@ -2,11 +2,9 @@
 
 use Illuminate\Foundation\Http\Middleware\VerifyCsrfToken;
 use Illuminate\Support\Facades\Route;
-use Modules\CrmCore\Http\Controllers\LegacyPhpApiController;
 use Modules\CrmReservations\Http\Controllers\ReservationApiController;
 
 $crmApiMiddleware = ['throttle:crm-api', 'crm.compress'];
-$crmLegacyApiMiddleware = ['throttle:crm-legacy-api', 'crm.compress'];
 
 Route::view('/reservations', 'crm')
     ->middleware(['auth', 'crm.module:reservations,reservations.view,reservations.create,reservations.manage_vehicles'])
@@ -58,9 +56,3 @@ Route::match(['GET', 'POST'], '/api/mobile/reservations', ReservationApiControll
     ->middleware(['auth:sanctum', ...$crmApiMiddleware, 'crm.mobile_scope:crm:module:reservations'])
     ->withoutMiddleware([VerifyCsrfToken::class])
     ->name('crm.api.mobile.reservations');
-
-Route::any('/api/reservations.php', LegacyPhpApiController::class)
-    ->defaults('crm_legacy_target', '/api/reservations')
-    ->middleware($crmLegacyApiMiddleware)
-    ->withoutMiddleware([VerifyCsrfToken::class])
-    ->name('crm.api.reservations.legacy');
